fix overflow of the story section

--- a/src/app/story/story.component.css
+++ b/src/app/story/story.component.css
@@ -3,6 +3,7 @@
   position: relative;
   display: inline-block;
   width: 100%;
+  overflow: hidden;
 }
 
 #amazed-dog-image {
